# kit

./: .gitignore  .pilot-commands.yaml  README.md  README_fr.md  generate_client.sh  generate_nodejs_client.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
arcane/: __init__.py  api_client.py  configuration.py  engine.py  exceptions.py  rest.py  util.py
arcane/api/: __init__.py  authentication_api.py  pr_retrieval_api.py  repository_installation_api.py  task_creation_api.py  task_retrieval_api.py
arcane/docs/: AuthenticationApi.md  BadRequest.md  Input.md  InstallationStatus.md  NotFound.md  Output.md  PRNumberResponse.md  PRRetrievalApi.md  Prompt.md  RepoBranchInput.md  RepositoryInstallationApi.md  Task.md  TaskCreationApi.md  TaskRetrievalApi.md
arcane/models/: __init__.py  bad_request.py  input.py  installation_status.py  not_found.py  output.py  pr_number_response.py  prompt.py  repo_branch_input.py  task.py
arcane/test/: test_authentication_api.py  test_bad_request.py  test_input.py  test_installation_status.py  test_not_found.py  test_output.py  test_pr_number_response.py  test_pr_retrieval_api.py  test_prompt.py  test_repo_branch_input.py  test_repository_installation_api.py  test_task.py  test_task_creation_api.py  test_task_retrieval_api.py
pr_pilot/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  util.py
pr_pilot/api/: __init__.py  pr_retrieval_api.py  task_creation_api.py  task_retrieval_api.py
pr_pilot/docs/: BadRequest.md  NotFound.md  PRNumberResponse.md  PRRetrievalApi.md  Task.md  (+4 more)
(+16 files in other folders)
