[tool.poetry]
name = "arcane-engine"
version = "1.11.2"
description = "Python SDK for Arcane Engine, a text-to-task automation platform."
authors = ["Marco Lamina <marco@arcane.engineer>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/arc-eng/kit"
packages = [
    { include = "arcane" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "<2.7"
urllib3 = "2.2.1"
python-dateutil = "2.9.0"
wheel = "0.42.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
